# cs4514fyp

./: .gitignore  README.md
.github/workflows/: reusable-docker-build.yml  services-build.yaml
code/: NOTE.md
code/count_ws_message/: count_ws_message.py
code/data-transformation-pipelines/: Dockerfile  pyproject.toml
code/data-transformation-pipelines/src/: .env.example  env.py  main.py
code/data-transformation-pipelines/src/etl_pipelines/: base.py  kafka_to_timescaledb.py  mqtt_to_kafka.py
code/data-transformation-pipelines/src/schemas/: kafka.py  timescaledb.py
code/demo-data/: .env.example  Dockerfile  pyproject.toml
code/demo-data/src/: main.py
code/device-data-service/: Dockerfile  pyproject.toml
code/device-data-service/src/: .env.example  env.py  main.py
code/device-data-service/src/logic/: authorize.py  rt_data_fetching.py  sub_manager.py
code/device-data-service/src/repository/: ema_service.py  telemetry.py
code/device-data-service/src/router/: historical.py  real_time.py
code/device-data-service/src/schemas/: telemetry.py
code/device-healthiness-monitoring-service/ad-pipeline/: pyproject.toml
code/device-healthiness-monitoring-service/jupyter/: anomaly_detection_playground.ipynb  pysad_ad_playground.ipynb
code/device-healthiness-monitoring-service/web-server/: pyproject.toml
code/device-healthiness-monitoring-service/web-server/src/: .env.example  env.py  main.py
code/device-healthiness-monitoring-service/web-server/src/logic/: authorize.py
code/device-healthiness-monitoring-service/web-server/src/repository/: anomaly.py  ema_service.py
code/device-healthiness-monitoring-service/web-server/src/router/: anomaly_data.py  post_data.py  real_time.py
code/device-healthiness-monitoring-service/web-server/src/schemas/: internal.py  rest.py
code/ema-service/: Dockerfile  pyproject.toml
code/ema-service/src/: env.py  main.py
code/ema-service/src/defacto/: scope_permit.json
code/ema-service/src/logic/: authenticate.py  authorize.py  device.py  flat.py  user.py
code/ema-service/src/repository/: connection.py  device.py  flat.py  floor.py  init_db.py  user.py
code/ema-service/src/router/: auth.py  device.py  flat.py  floor.py  user.py
code/ema-service/src/schemas/: enums.py  internal.py  models.py  rest.py
code/iot-device-simulator/: .Dockerignore  Dockerfile  README.md  pyproject.toml
code/iot-device-simulator/jupyter/: transform_dataset.ipynb
code/iot-device-simulator/src/: main.py  schedule.json
code/random-data-generator/: pyproject.toml
code/random-data-generator/src/: config.json  main.py
code/web-ui/: Dockerfile  package-lock.json  package.json
code/web-ui/public/: index.html
code/web-ui/src/: env.ts  hooks.ts  index.tsx  store.ts
code/web-ui/src/Schemas/: ema.ts  (+2 more)
dc-for-dependencies/: README.md
dc-for-dependencies/kafka/: docker-compose.yaml
dc-for-dependencies/mqtt/: docker-compose.yaml
dc-for-dependencies/mqtt/config/: passwordfile
dc-for-dependencies/timescaledb/: docker-compose.yaml
dependencies-dc/: README.md
dependencies-dc/timescaledb/: docker-compose.yaml
deployment/docker-compose/: README.md  docker-compose.yaml
deployment/docker-compose/mqtt-config/: mosquitto.conf
deployment/helm/data-transformation-pipelines/: Chart.yaml  values.yaml
deployment/helm/device-data-service/: Chart.yaml  values.yaml
deployment/helm/device-healthiness-monitoring-service/: Chart.yaml  values.yaml
deployment/helm/ema-service/: Chart.yaml  values.yaml
deployment/terraform/: README.md  variables.tf
extra-info/: DEMO-DATA.md
(+136 files in other folders)
