[tool.poetry]
name = "ema-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
loguru = "^0.7.2"
bcrypt = "^4.0.1"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
pendulum = "^2.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
